# Mini-Tensor-Engine

./: CMakeLists.txt  Overview  README.md  Summary  Summary.md  results.csv  results.json
build-x86-avx2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
data/examples/relu_classifier/: b2.txt  input.txt  meta.json  w1.txt
data/examples/sigmoid_gate/: b1.txt  b2.txt  input.txt  meta.json  model.txt  output.txt  w1.txt  w2.txt
data/examples/tanh_mixer/: b1.txt  b2.txt  b3.txt  input.txt  meta.json  model.txt  output.txt  w1.txt  w2.txt  w3.txt
data/reference/: b1.txt  model.txt  output.txt  w2.txt
include/mte/: io.hpp  layers.hpp  model.hpp  quantize.hpp  tensor.hpp
python/: baseline.py  export_reference.py
src/: benchmark.cpp  io.cpp  layers.cpp  main.cpp  model.cpp  quantize.cpp  tensor.cpp
tests/: test_tensor.cpp
ui/: server.py
ui/static/: app.js  index.html  styles.css
